# RT_curve

./: README.md  finalProject.docx
RT_Weekend/: CMakeLists.txt  RT_OneWeekend.sln  image.ppm
RT_Weekend/RT_OneWeekend/: HelloWorld.cpp  RT_OneWeekend.vcxproj.filters  Ray.cpp  Vec3.h  aabb.h  bezierCurve.h  bezierSurface.h  boundingBox.h  bvh.h  camera.h  chapter3.cpp  chapter4.cpp  chapter5.cpp  chapter6-1.cpp  chapter6.cpp  chapter7.cpp  color.h  curve.h  hittable.h  hittable_2.cpp  hittable_list.h  interval.cpp  interval.h  main.cpp  material.h  quadratic.h  ray.h  ribbon.h  rtweekend.h  sphere.cpp  sphere.h  sphere_list.h  sphere_main.cpp  texture.h  triangle.h  utility.h
RT_Weekend/RT_OneWeekend/x64/Debug/: RT_OneWeekend.exe.recipe  RT_OneWeekend.ilk
RT_Weekend/RT_OneWeekend/x64/Debug/RT_OneWeekend.tlog/: CL.read.1.tlog  CL.write.1.tlog  link.read.1.tlog
RT_Weekend/RT_bezier/: RT_OneWeekend.vcxproj  bezierCurve.h  bezierSurface.h  camera.h  color.h  hittable.h  interval.cpp  main.cpp  quadrangle.h  sphere.h  texture.h  triangle.h
RT_Weekend/RT_bezier/x64/Debug/: vc143.idb
RT_Weekend/RT_bezier/x64/Debug/RT_OneWeekend.tlog/: CL.command.1.tlog  Cl.items.tlog  RT_OneWeekend.lastbuildstate  link.command.1.tlog  link.write.1.tlog
final_project/: image.ppm
final_project/RT_bezier/: Vec3.h  bezierCurve.h  bezierSurface.h  camera.h  hittable.h  hittable_list.h  interval.h  main.cpp  quadrangle.h  sphere.h  triangle.h  utility.h
